# FlappyBird

./: .gitignore  CMakeLists.txt  basegraphic.cpp  basegraphic.h  gameloop.cpp  gameloop.h  main  main.cpp  moveableObject.cpp  moveableObject.h  pipemanager.cpp  pipemanager.h  player.cpp  player.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
